<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="15dp"
            android:text="@string/title_first"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llMultiCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_border_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:text="@string/cur_exchange_rate"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMultiCurrencyMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_border_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:text="@string/all_minut_price"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="15dp"
            android:text="@string/title_second"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llSingleCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_border_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:text="@string/perticular_cur_exchange"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSingleCurrencyMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_border_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:text="@string/perticular_minut_price"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>